updated sample to reflect refactoring of interfaces

--- a/samples/local_environment.ipynb
+++ b/samples/local_environment.ipynb
@@ -24,7 +24,7 @@
     "import pandas as pd \n",
     "import logging\n",
     "import numpy as np\n",
-    "from arcus.azureml.workenvironment import WorkEnvironment\n"
+    "from arcus.azureml.environment.workenvironment import WorkEnvironment\n"
    ]
   },
   {
@@ -40,7 +40,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "work_env = WorkEnvironment(connected = False, datastore_path='../tests/resources/datastore')"
+    "work_env = WorkEnvironment.Create(connected = False, datastore_path='../tests/resources/datastore')"
    ]
   },
   {
