--- a/samples/aml_environment.ipynb
+++ b/samples/aml_environment.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-05-14T09:57:43.980546Z",
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-05-14T09:57:44.887613Z",
@@ -58,14 +58,9 @@
    },
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
-     "text": [
-      "Connected to AzureML workspace\n",
-      ">> Name: codit-ai-incubators-ml\n",
-      ">> Subscription: c1537527-c126-428d-8f72-1ac9f2c63c1f\n",
-      ">> Resource group: codit-ai-incubators\n"
-     ]
+     "name": "stdout",
+     "text": "Connected to AzureML workspace\n>> Name: codit-ai-incubators-ml\n>> Subscription: c1537527-c126-428d-8f72-1ac9f2c63c1f\n>> Resource group: codit-ai-incubators\n"
     }
    ],
    "source": [
@@ -3117,7 +3112,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.5"
+   "version": "3.7.5-final"
   },
   "toc": {
    "base_numbering": 1,
