fix-create-training

--- a/samples/remote_training.ipynb
+++ b/samples/remote_training.ipynb
@@ -37,6 +37,17 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "training_name = 'Arcus-Remote-Training'\n",
+    "trainer = aml.start_experiment(training_name)\n",
+    "trainer.setup_training(training_name)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
